--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section>
     <div id="aboutMe">
       <div id="about-img">
-        <img src="monika.jpg" alt="monika">
+        <img src="" alt="monika">
       </div>
       <div class="aboutText">
         <h3>Hello</h3>
